# StreamingViewerTV

./: .gitignore  DevReadme.md  Makefile  README.md  buglist.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
builder/: __init__.py  check_urls.py  download_streams.py  enrich.py  fetch_epg.py  import_catalog.py  paths.py  prepare_db.py  probe.py
packaging/: streaming_viewer_tv.spec
stream_viewer/: __init__.py  _version.py  app.py  db.py  epg.py  launcher.py
stream_viewer/static/: app.css  app.js
stream_viewer/templates/: index.html
tests/: conftest.py  db_fixtures.py  test_catalog_categories.py  test_epg.py  test_frozen_paths.py  test_known_issues.py  test_live_streams.py  test_now_playing_ui.py  test_prepare_db.py  test_ui_filters_playwright.py
